fixed columns overlapping

--- a/assets/css/artist-style.css
+++ b/assets/css/artist-style.css
@@ -58,7 +58,7 @@ footer {
   list-style-type: none;
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1199px) {
   #friends,
   #comments,
   #moreSongs,
